# EmbeddedTest

./: .gitignore  Readme.md
gpsParsing/gpsParsing/: Manager.cpp  Manager.h  PacketHandler.cpp  PacketHandler.h  gpsParsing.cpp  gpsParsing.sln  gpsParsing.vcxproj  gpsParsing.vcxproj.filters  pch.cpp  pch.h
ros2Node/: CMakeLists.txt  package.xml
ros2Node/include/: PacketHandler.h
ros2Node/src/: PacketHandler.cpp  gps_node.cpp
videoStreaming/server/: server.py
videoStreaming/videoStreamer/: server.py  videoStreamer.cpp  videoStreamer.sln  videoStreamer.vcxproj  videoStreamer.vcxproj.filters
